feat: publish restaurant search events to kafka
